patch CodeMirror with 100ad84 commit

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
 <link rel="stylesheet" href="codemirror.css">
 <link rel="stylesheet" href="base16-light.css">
-<script src="codemirror.js"></script>
-<script src="markdown.js"></script>
+<script src="codemirror.min.js"></script>
+<script src="markdown.min.js"></script>
 <style type="text/css">
 body {
 	font-family: BMitra, ENassim, Arial;
