--- a/index.html
+++ b/index.html
@@ -80,14 +80,18 @@ html, body {
 	font-family: BMitra, ENassim, Arial;
 	line-height: 1.5;
 }
-.cm-variable-2 {
-	display: inline-block;
-}
 .CodeMirror-scroll {
 	overflow-y: hidden;
 	overflow-x: auto;
 }
 .ltr {
+	direction: ltr;
+	font-family: ENassim, BMitra, Arial;
+}
+.cm-variable-2, .cm-string {
+	display: inline-block;
+}
+.cm-string {
 	direction: ltr;
 	font-family: ENassim, BMitra, Arial;
 }
