--- a/index.html
+++ b/index.html
@@ -70,7 +70,9 @@ td[align=right], th[align=right] {
 </style>
 
 <div class="container" style="margin-top: 50px">
-	<textarea id="content" name="content" style="display: none"># مرتب
+
+<textarea id="content" name="content" style="display: none">
+# مرتب
 متن *مرتب* یا [مارک‌دان]، نوشته‌ای است که شیوه نمایش آن با علامت‌های ساده‌ای مشخص شده است. یعنی شکل نمایش متن را لابه‌لای واژه‌ها می‌نویسید. مثلا *خاص* بودن یک عبارت و یا **تاکید** روی نکته‌ها با کمک ستاره انجام می‌شود.
 
 > وقتی *مرتب* می‌نویسید، مطمئن هستید که چیزی در متن پنهان نشده. در مقابل نرم‌افزار [ورد] که گاهی می‌بینید نشان‌گر روی یک خط خالی ایستاده و به صورت *مورب* قرار گرفته؛ انگار چیزی آن زیر هست. راستش آن زیر، [چیز خیلی مزخرفی] هست.
@@ -87,12 +89,6 @@ td[align=right], th[align=right] {
 
 ![تصویر پرنده‌ها](http://www.sobhe.ir/baaz/img/goshawk.jpg)
 
-## کد
-اگر برنامه‌نویس هستید، این کد `Python` همین نوشته را تبدیل به قالب `HTML` می‌کند:
-
-	>>> import markdown
-	>>> markdown.markdown(content, extensions=['tables', 'footnotes'])
-
 ## جدول
 جدول *مرتب* شده هم بسیار بامزه است (نقطه‌ها چینش ستون را نشان می‌دهد):
 
@@ -101,7 +97,18 @@ td[align=right], th[align=right] {
 | مرتب    |          ✓            |            ✗           |
 | ورد       |          ✗            |           ✓           |
 
-به این ترتیب، نوشته [مرتب] با مشخص کردن آدرس پیوندها به پایان می‌رسد.
+## فرمول‌های ریاضی
+در نوشته‌های تخصصی، فرمول‌های ریاضی هم لازم می‌شوند، که می‌توانید آنها را در قالب `LaTeX` بنویسید:
+
+$$ P(E) = {n \choose k} p^k (1-p)^{ n-k} $$
+
+## کد
+اگر برنامه‌نویس هستید، تکه کد `Python` زیر، همین نوشته را به قالب `HTML` تبدیل می‌کند:
+
+	>>> import markdown
+	>>> markdown.markdown(content, extensions=['tables', 'footnotes'])
+
+و بلاخره، نوشته [مرتب] با مشخص کردن آدرس پیوندها به پایان می‌رسد.
 
 [مرتب]: http://www.sobhe.ir/moratab
 [مارک‌دان]: https://daringfireball.net/projects/markdown
@@ -109,7 +116,7 @@ td[align=right], th[align=right] {
 [ورد]: http://office.microsoft.com/en-us/word
 [چیز خیلی مزخرفی]: http://www.antipope.org/charlie/blog-static/2013/10/why-microsoft-word-must-die.html
 [^1]: پاورقی
-		</textarea>
+</textarea>
 </div>
 <hr style="border-top: 20px solid #fff">
 <div class="container">
@@ -129,14 +136,9 @@ td[align=right], th[align=right] {
 </ul>
 <p>قرار دادن <a href="http://peyvandha.ir">پیوند</a>، پاورقی<sup id="fnref:1"><a class="footnote-ref" href="#fn:1" rel="footnote">1</a></sup> و یا حتی تصویر هم در این نوشتار پیش‌بینی شده:</p>
 <p><img alt="تصویر پرنده‌ها" src="http://www.sobhe.ir/baaz/img/goshawk.jpg" /></p>
-<h2>کد</h2>
-<p>اگر برنامه‌نویس هستید، این کد <code>Python</code> همین نوشته را تبدیل به قالب <code>HTML</code> می‌کند:</p>
-<pre><code>&gt;&gt;&gt; import markdown
-&gt;&gt;&gt; markdown.markdown(content, extensions=['tables', 'footnotes'])
-</code></pre>
 <h2>جدول</h2>
 <p>جدول <em>مرتب</em> شده هم بسیار بامزه است (نقطه‌ها چینش ستون را نشان می‌دهد):</p>
-<table class="table table-striped">
+<table>
 <thead>
 <tr>
 <th align="left">نوشتار</th>
@@ -157,7 +159,15 @@ td[align=right], th[align=right] {
 </tr>
 </tbody>
 </table>
-<p>به این ترتیب، نوشته <a href="http://www.sobhe.ir/moratab">مرتب</a> با مشخص کردن آدرس پیوندها به پایان می‌رسد.</p>
+<h2>فرمول‌های ریاضی</h2>
+<p>در نوشته‌های تخصصی، فرمول‌های ریاضی هم لازم می‌شوند، که می‌توانید آنها را در قالب <code>LaTeX</code> بنویسید:</p>
+<p>$$ P(E) = {n \choose k} p^k (1-p)^{ n-k} $$</p>
+<h2>کد</h2>
+<p>اگر برنامه‌نویس هستید، تکه کد <code>Python</code> زیر، همین نوشته را به قالب <code>HTML</code> تبدیل می‌کند:</p>
+<pre><code>&gt;&gt;&gt; import markdown
+&gt;&gt;&gt; markdown.markdown(content, extensions=['tables', 'footnotes'])
+</code></pre>
+<p>و بلاخره، نوشته <a href="http://www.sobhe.ir/moratab">مرتب</a> با مشخص کردن آدرس پیوندها به پایان می‌رسد.</p>
 <div class="footnote">
 <hr />
 <ol>
@@ -165,8 +175,11 @@ td[align=right], th[align=right] {
 <p>پاورقی&#160;<a class="footnote-backref" href="#fnref:1" rev="footnote" title="Jump back to footnote 1 in the text">&#8617;</a></p>
 </li>
 </ol>
-</div>	</div>
 </div>
+	</div>
+</div>
+
+<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
 <link rel="stylesheet" href="codemirror.css">
 <link rel="stylesheet" href="base16-light.css">
@@ -202,16 +215,17 @@ var editor = CodeMirror.fromTextArea(document.getElementById("content"), {
 	lineNumbers: false,
 	lineWrapping: true,
 	rtlMoveVisually: false,
+	autoCloseBrackets: true,
 	theme: 'base16-light',
 	viewportMargin: Infinity,
 	cursorHeight: 0.85
 });
-var ltr = /^[ <>*+\t\/\[\(-]*[A-Za-z]/;
+var ltr = /^[ <>*+\t\/\[\($-]*[A-Za-z]/;
 function setLineDirection(line) {
 	if (ltr.test(line.text))
-		editor.addLineClass(line, 'wrap', 'ltr')
+		editor.addLineClass(line, 'wrap', 'ltr');
 	else
-		editor.removeLineClass(line, 'wrap', 'ltr')
+		editor.removeLineClass(line, 'wrap', 'ltr');
 }
 editor.eachLine(setLineDirection);
 editor.on('renderLine', function (cm, line) { setLineDirection(line); });
