fix table style

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ $$ P(E) = {n \choose k} p^k (1-p)^{ n-k} $$
 <p><img alt="تصویر پرنده‌ها" src="http://www.sobhe.ir/baaz/img/goshawk.jpg" /></p>
 <h2>جدول</h2>
 <p>جدول <em>مرتب</em> شده هم بسیار بامزه است (نقطه‌ها چینش ستون را نشان می‌دهد):</p>
-<table>
+<table class="table table-striped">
 <thead>
 <tr>
 <th align="left">نوشتار</th>
@@ -215,7 +215,6 @@ var editor = CodeMirror.fromTextArea(document.getElementById("content"), {
 	lineNumbers: false,
 	lineWrapping: true,
 	rtlMoveVisually: false,
-	autoCloseBrackets: true,
 	theme: 'base16-light',
 	viewportMargin: Infinity,
 	cursorHeight: 0.85
