use IRMitra font

--- a/index.html
+++ b/index.html
@@ -4,21 +4,20 @@
 	<title>مرتب</title>
 	<meta charset="utf-8" />
 	<link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css">
-	<link rel="stylesheet" href="http://sobhe.ap01.aws.af.cm/css/Fonts.css">
+	<link rel="stylesheet" href="http://sobhe.ap01.aws.af.cm/css/IRMitra.css">
 </head>
 <body>
 <style type="text/css">
 body {
-	font-family: BMitra, ENassim, Arial;
+	font-family: IRMitra, Arial;
 	font-size: 18px;
 	line-height: 1.5;
 	direction: rtl;
 	background: #f5f5f5;
 }
 h1, h2, h3, h4 {
-	font-family: BMitra, ENassim, Arial;
+	font-family: IRMitra, Arial;
 	font-weight: bold;
-	letter-spacing: -1;
 }
 
 .container {
@@ -92,10 +91,10 @@ td[align=right], th[align=right] {
 ## جدول
 جدول *مرتب* شده هم بسیار بامزه است (نقطه‌ها چینش ستون را نشان می‌دهد):
 
-| نوشتار   | بدون نیاز به آموزش | ویژگی‌های نامتناهی |
-|:------|:------------:|:------------:|
-| مرتب    |          ✓            |            ✗           |
-| ورد       |          ✗            |           ✓           |
+| نوشتار    | بدون نیاز به آموزش | ویژگی‌های نامتناهی  |
+|:-----|:-----------:|:------------:|
+| مرتب      |              ✓              |                ✗               |
+| ورد          |              ✗              |                ✓               |
 
 ## فرمول‌های ریاضی
 در نوشته‌های تخصصی، فرمول‌های ریاضی هم لازم می‌شوند، که می‌توانید آنها را در قالب `LaTeX` بنویسید:
@@ -189,7 +188,7 @@ $$ P(E) = {n \choose k} p^k (1-p)^{ n-k} $$
 <style type="text/css">
 .CodeMirror {
 	height: auto;
-	font-family: BMitra, ENassim, Arial;
+	font-family: IRMitra, Arial;
 	line-height: 1.5;
 }
 .CodeMirror-scroll {
@@ -198,14 +197,12 @@ $$ P(E) = {n \choose k} p^k (1-p)^{ n-k} $$
 }
 .ltr {
 	direction: ltr;
-	font-family: ENassim, BMitra, Arial;
 }
 .cm-variable-2, .cm-string {
 	display: inline-block;
 }
 .cm-string {
 	direction: ltr;
-	font-family: ENassim, BMitra, Arial;
 }
 </style>
 
