add default text

--- a/index.html
+++ b/index.html
@@ -33,6 +33,54 @@ h1, h2, h3, h4 {
 	<div id="moratab"></div>
 </div>
 
+<script id="default" type="text">
+# مرتب
+
+متن *مرتب* یا [مارک‌دان]، نوشته‌ای است که شیوه نمایش آن با علامت‌های ساده‌ای مشخص شده است. یعنی شکل نمایش متن را لابه‌لای واژه‌ها می‌نویسید. مثلا *خاص* بودن یک عبارت و یا **تاکید** روی نکته‌ها با کمک ستاره انجام می‌شود.
+
+> وقتی *مرتب* می‌نویسید، مطمئن هستید که چیزی در متن پنهان نشده. در مقابل نرم‌افزار [ورد] که گاهی می‌بینید نشان‌گر روی یک خط خالی ایستاده و به صورت *مورب* قرار گرفته؛ انگار چیزی آن زیر هست. راستش آن زیر، [چیز خیلی مزخرفی] هست.
+
+نوشته‌های *مرتب* کاربردهای زیادی دارند:
+
++ [پرسیدن سوال](http://stackoverflow.com)
++ [بحث در مورد پروژه](https://github.com)
++ [وب‌نوشت](https://svbtle.com)
++ [گزارش پروژه](http://www.boute.ir)
++ ...
+
+قرار دادن [پیوند]، پاورقی[^1] و یا حتی تصویر هم در این نوشتار پیش‌بینی شده:
+
+![تصویر پرنده‌ها](http://www.sobhe.ir/baaz/img/goshawk.jpg)
+
+## جدول
+جدول *مرتب* شده هم بسیار بامزه است (نقطه‌ها چینش ستون را نشان می‌دهد):
+
+| نوشتار    | بدون نیاز به آموزش | ویژگی‌های نامتناهی  |
+|:-----|:-----------:|:------------:|
+| مرتب      |              ✓              |                ✗               |
+| ورد          |              ✗              |                ✓               |
+
+## فرمول‌های ریاضی
+در نوشته‌های تخصصی، فرمول‌های ریاضی هم لازم می‌شوند، که می‌توانید آنها را در قالب $ LaTeX $ بنویسید:
+
+$$ P(E) = {n \choose k} p^k (1-p)^{ n-k} $$
+
+## کد
+اگر برنامه‌نویس هستید، تکه کد `Python` زیر، همین نوشته را به قالب `HTML` تبدیل می‌کند:
+
+    >>> import markdown
+    >>> markdown.markdown(content, extensions=['tables', 'footnotes'])
+
+و بلاخره، نوشته [مرتب] با مشخص کردن آدرس پیوندها به پایان می‌رسد.
+
+[مرتب]: http://www.sobhe.ir/moratab
+[مارک‌دان]: https://daringfireball.net/projects/markdown
+[پیوند]: http://peyvandha.ir
+[ورد]: http://office.microsoft.com/en-us/word
+[چیز خیلی مزخرفی]: http://www.antipope.org/charlie/blog-static/2013/10/why-microsoft-word-must-die.html
+[^1]: پاورقی
+</script>
+
 <script src="epiceditor.js"></script>
 
 <script type="text/javascript">
@@ -56,7 +104,7 @@ var opts = {
 	parser: marked,
 	file: {
 		name: 'moratab',
-		defaultContent: '',
+		defaultContent: document.getElementById('default').text.trim(),
 		autoSave: 100
 	},
 	theme: {
