use newest marked.js
remove marked from epiceditor code

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@ $$ P(E) = {n \choose k} p^k (1-p)^{ n-k} $$
 [^1]: پاورقی
 </script>
 
+<script src="marked.js"></script>
 <script src="epiceditor.js"></script>
 
 <script type="text/javascript">
