tweak page html
fix moratab usage

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@ $$ P(E) = {n \choose k} p^k (1-p)^{ n-k} $$
 ## کد
 اگر برنامه‌نویس هستید، تکه کد `Python` زیر، همین نوشته را به قالب `HTML` تبدیل می‌کند:
 
-    >>> import markdown
-    >>> markdown.markdown(content, extensions=['tables', 'footnotes'])
+    >>> import moratab
+    >>> moratab.render(content)
 
 و بلاخره، نوشته [مرتب] با مشخص کردن آدرس پیوندها به پایان می‌رسد.
 
