activate client side storage

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ var opts = {
 	container: 'moratab',
 	textarea: null,
 	basePath: '',
-	clientSideStorage: false,
+	clientSideStorage: true,
 	parser: marked,
 	file: {
 		name: 'moratab',
