--- a/index.html
+++ b/index.html
@@ -3,17 +3,6 @@
 <head>
 	<title>مرتب</title>
 	<meta charset="utf-8" />
-	<style type="text/css">
-		body {
-			direction: rtl;
-		}
-		.container {
-			max-width: 700px;
-		}
-		#stackedit {
-			margin-top: 20px;
-		}
-	</style>
 </head>
 <body>
 <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -22,11 +11,24 @@
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 
-<link type="text/css" rel="stylesheet" href="editor.css">
 <script src="prism.js"></script>
 <script src="prism-markdown.js"></script>
 <script src="Markdown.Editor.js"></script>
 <script src="editor.js"></script>
+
+<link type="text/css" rel="stylesheet" href="editor.css">
+<style type="text/css">
+	body {
+		direction: rtl;
+		background: #F5F5F5;
+	}
+	.container {
+		max-width: 700px;
+	}
+	#stackedit {
+		margin-top: 20px;
+	}
+</style>
 
 <div class="container">
 <div id="stackedit">
