--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
 	.container {
 		max-width: 700px;
 	}
-	#stackedit {
+	#moratab {
 		margin-top: 20px;
 	}
 </style>
 
 <div class="container">
-<div id="stackedit">
+<div id="moratab">
 # مرتب
 
 متن *مرتب* یا [مارک‌دان]، نوشته‌ای است که شیوه نمایش آن با علامت‌های ساده‌ای مشخص شده است. یعنی شکل نمایش متن را لابه‌لای واژه‌ها می‌نویسید. مثلا *خاص* بودن یک عبارت و یا **تاکید** روی نکته‌ها با کمک ستاره انجام می‌شود.
@@ -81,7 +81,7 @@ $$ P(E) = {n \choose k} p^k (1-p)^{ n-k} $$
 </div>
 
 <script type="text/javascript">
-	var editor = $('#stackedit').stackedit();
+	var editor = $('#moratab').moratab();
 </script>
 
 </body>
