add help button

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ $$ P(E) = {n \choose k} p^k (1-p)^{ n-k} $$
 </div>
 
 <script type="text/javascript">
-	var editor = $('#moratab').moratab();
+	var editor = $('#moratab').moratab({strings: {help: ''}});
 </script>
 
 </body>
