remove editor font
fix button position

--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
 	#moratab {
 		margin-top: 20px;
 	}
+
+	@font-face {
+	font-family: IRMitra;
+		font-weight: normal;
+		src: url('IRMitra.woff') format('woff');
+	}
+	#wmd-input, .modal .btn, .modal p {
+		font-family: IRMitra;
+	}
 </style>
 
 <div class="container">
