arrange editor files

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
 	<meta charset="utf-8" />
 </head>
 <body>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/mousetrap/1.4.6/mousetrap.min.js"></script>
-<script src="http://cdnjs.cloudflare.com/ajax/libs/diff_match_patch/20121119/diff_match_patch.js"></script>
-<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+<script type="text/javascript" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 
-<script src="prism.js"></script>
-<script src="Markdown.Editor.js"></script>
-<script src="editor.js"></script>
+<script type="text/javascript" src="libs.js"></script>
+
+<script type="text/javascript" src="syntax.js"></script>
+<script type="text/javascript" src="buttons.js"></script>
+<script type="text/javascript" src="editor.js"></script>
 
 <link type="text/css" rel="stylesheet" href="editor.css">
 
