append simple footnotes before markdown conversion

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 + [گزارش پروژه](http://www.boute.ir)
 + ...
 
-قرار دادن [پیوند]، پاورقی[^1] و یا حتی تصویر هم در این نوشتار پیش‌بینی شده:
+قرار دادن [پیوند]، پاورقی[^Footnote] و یا حتی تصویر هم در این نوشتار پیش‌بینی شده:
 
 ![تصویر باز شکاری](http://www.sobhe.ir/baaz/img/goshawk.jpg)
 
@@ -82,7 +82,6 @@ $$ P(E) = {n \choose k} p^k (1-p)^{ n-k} $$
 [پیوند]: http://peyvandha.ir
 [ورد]: http://office.microsoft.com/en-us/word
 [چیز خیلی مزخرفی]: http://www.antipope.org/charlie/blog-static/2013/10/why-microsoft-word-must-die.html
-[^1]: پاورقی
 </div>
 </div>
 
