put editor files in one folder

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 
-<script type="text/javascript" src="libs.js"></script>
-<script type="text/javascript" src="syntax.js"></script>
-<script type="text/javascript" src="buttons.js"></script>
-<script type="text/javascript" src="editor.js"></script>
+<script type="text/javascript" src="editor/libs.js"></script>
+<script type="text/javascript" src="editor/syntax.js"></script>
+<script type="text/javascript" src="editor/buttons.js"></script>
+<script type="text/javascript" src="editor/editor.js"></script>
 
-<link type="text/css" rel="stylesheet" href="editor.css">
+<link type="text/css" rel="stylesheet" href="editor/editor.css">
 
 <style type="text/css">
 	body {
@@ -29,7 +29,7 @@
 	@font-face {
 	font-family: IRMitra;
 		font-weight: normal;
-		src: url('IRMitra.woff') format('woff');
+		src: url('editor/IRMitra.woff') format('woff');
 	}
 	#wmd-input, .modal .btn, .modal p {
 		font-family: IRMitra;
