convert pasted html to markdown

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <script type="text/javascript" src="editor/syntax.js"></script>
 <script type="text/javascript" src="editor/buttons.js"></script>
 <script type="text/javascript" src="editor/editor.js"></script>
+<script type="text/javascript" src="editor/convertor.js"></script>
 
 <link type="text/css" rel="stylesheet" href="editor/editor.css">
 
