add print style

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 	}
 
 	@font-face {
-	font-family: IRMitra;
+		font-family: IRMitra;
 		font-weight: normal;
-		src: url('editor/IRMitra.woff') format('woff');
+		src: url('style/IRMitra.woff') format('woff');
 	}
 	#wmd-input, .modal .btn, .modal p {
 		font-family: IRMitra;
